--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,20 @@
-module.exports = {
+{
     "extends": "standard",
     "rules": {
         "semi": 0,
-        "indent": ["error", 4],
+        "indent": [
+            "error",
+            4
+        ],
         "camelcase": 0,
-        "space-before-function-paren": ["error", {
-            "anonymous": "always",
-            "named": "never",
-            "asyncArrow": "always"
-        }],
+        "space-before-function-paren": [
+            "error",
+            {
+                "anonymous": "always",
+                "named": "never",
+                "asyncArrow": "always"
+            }
+        ],
         "no-fallthrough": 0,
         "no-unused-vars": 0,
         "eqeqeq": 0,
@@ -22,4 +28,4 @@ module.exports = {
         "no-unused-expressions": 0,
         "no-new": 0
     }
-};
+}
